# sokoban-solver

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  open-reports.sh
benches/: criterion_benches.rs
git-hooks/: pre-commit
levels/: 02-long-way.txt  02-two-boxes.txt  696.txt  Boxxle1.txt  README.md  easy-2.txt  splitter.py  supaplex.txt
levels/696/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+656 more)
levels/aymeric-cosmonotes/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
levels/aymeric-microcosmos/: 1.txt  17.txt
levels/aymeric-minicosmos/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  5.txt  9.txt
levels/aymeric-nabocosmos/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  5.txt  6.txt  7.txt  8.txt  9.txt
levels/aymeric-picocosmos/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
levels/boxxle1/: 1.txt  10  100.txt  101.txt  102  103.txt  104.txt  105  106  107.txt  108.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17  18.txt  19.txt  2.txt  21.txt  22.txt  23.txt  24  25.txt  26.txt  27  28.txt  29  3.txt  30.txt  31  32.txt  33  34.txt  35.txt  36  37.txt  38  (+67 more)
levels/boxxle1-moves/: 1.txt
levels/boxxle1-pushes/: 3.txt  4.txt  5.txt  7.txt
levels/boxxle1-results/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
levels/boxxle2/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  (+80 more)
levels/custom-moves/: 03-long-way.txt  04-two-boxes.txt  easy-2.txt  moderate-7.txt  no-solution-parking.txt
levels/custom-pushes/: 02-one-way.txt  05-google-images-play.txt  06-google-images-1.txt  (+3 more)
puzzles/: 01-one-way-1.txt  01.txt  03-google-images-play.txt  03-parking.txt  04-boxxle-1-1.txt  04-google-images-1.txt  moderate-6.txt  moderate-7.txt  supaplex.txt
src/: config.rs  data.rs  extensions.rs  formatter.rs  fs.rs  level.rs  lib.rs  main.rs  map.rs  map_formatter.rs  moves.rs  parser.rs  solution_formatter.rs  solver.rs  state.rs  utils.rs  vec2d.rs
tests/: run-binary.rs
(+2323 files in other folders)
