cargo-features = ["edition"]

[package]
name = "sokoban-solver"
version = "0.1.0"
authors = ["Martin Taibr <taibr.martin@gmail.com>"]
edition = '2018'


# abort on panic might be better when using threads
# (https://vorner.github.io/2018/07/22/dont_panic.html)

# criterion seems to be using release profile

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

# makes compilation unacceptably slow (over a minute for simple changes)
#lto = true

# 5-10% speedup, doesn't seem to affect compile time for simple changes
codegen-units = 1


[dev-dependencies]
criterion = { version = "0.2.4", features = ['real_blackbox'] }
assert_cmd = "0.9"

[[bench]]
name = "criterion_benches"
harness = false

[dependencies]
clap = "2.32.0"
separator = "0.3.1"
log = { version = "0.4.3", features = ["release_max_level_off"] }
env_logger = "0.5.12"
fnv = "1.0.6"
prettytable-rs = "0.7.0"
typed-arena = "1.4.1"
